chandeliers-lus/tests/compile_fail/ui/tc/when-int.stderr
error: Clock should be of type bool
 --> tests/compile_fail/ui/tc/when-int.rs:3:31
  |
3 |     node bar(b : int; x : int when b) returns ();
  |                               ^^^^^^
  |
note: The argument is found to be of type int
 --> tests/compile_fail/ui/tc/when-int.rs:3:18
  |
3 |     node bar(b : int; x : int when b) returns ();
  |                  ^^^
